Revise README for clarity and additional prerequisites